--- a/style.css
+++ b/style.css
@@ -222,3 +222,27 @@ margin-top: 20px;
     background-color: white;
     margin: 10px
 }
+
+/* Responsive for mobile views */
+@media only screen and (max-width: 600px) {
+  .container{
+    margin-top: 50px;
+  }
+  .left-box {
+    padding-left: 40%;
+    width: 550px;
+    height: 560px;
+    border : #81c8eb solid 2px;
+    margin-left: 20px;
+}
+
+.right-box {
+  padding-left: 40%;
+  display: flex;
+  flex-direction: column;
+  width: 550px;
+  height: 560px;
+  border : #81c8eb solid 2px;
+  margin-left: 5px;
+}
+}
