--- a/style.css
+++ b/style.css
@@ -246,3 +246,26 @@ margin-top: 20px;
   margin-left: 5px;
 }
 }
+
+@media only screen and (max-width: 360px) {
+  .container{
+    margin-top: 50px;
+  }
+  .left-box {
+    padding-left: 50%;
+    width: 550px;
+    height: 560px;
+    border : #81c8eb solid 2px;
+    margin-left: 20px;
+}
+
+.right-box {
+  padding-left: 50%;
+  display: flex;
+  flex-direction: column;
+  width: 550px;
+  height: 560px;
+  border : #81c8eb solid 2px;
+  margin-left: 5px;
+}
+}
